# yaml-pydantic-dataclass

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/yaml_dataclass/: __init__.py  core.py
tests/: test_core.py
